Zamiana wywołań List.of() na Collections.emptyList() w converterach. Dodanie endpointa na zapis treningu oraz przygotowanie pod to klasy service